# Heavy_Hitter_Oracles

./: .env  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
experiments/: config.py
experiments/data/: __init__.py
experiments/results/CAIDA/e2/2025-08-05 09:48:52/0/: errors.yml  params.yml
experiments/results/CAIDA/e2/2025-08-05 09:48:52/168/: errors.yml  params.yml
experiments/results/oracles/AOL/days_73/: seed_0.yaml  seed_168.yaml  seed_336.yaml  seed_42.yaml  seed_84.yaml
experiments/results/oracles/CAIDA/: seed_336.yaml  seed_42.yaml
experiments/results/oracles/Synthetic/n_50000/: seed_0.yaml  seed_168.yaml  seed_336.yaml  seed_42.yaml  seed_84.yaml
experiments/src/: hashing.py  loader.py  utils.py
experiments/src/experiments/: __init__.py  experiment.py  oracles.py  setup.py
experiments/src/experiments/exp_2_1/: single_run_exp_2_1.py  trials_exp_2_1.py
experiments/src/experiments/exp_2_2/: single_run_exp_2_2.py  trials_exp_2_2.py
experiments/src/experiments/overall_comparison/: exp_overall_comp.py  trials_overall_comp.py
experiments/src/experiments/part_1/: single_exps_part_1.py  trials_exps_part_1.py
experiments/src/preprocessing/: aol.py  caida.py
experiments/src/reproduction_scripts/: aol.py  caida.py  synthetic.py
experiments/src/sketches/: __init__.py  abstract_sketch.py
experiments/src/sketches/basic/: CountMin.py  CountSketch.py  CountSketchPlusPlus.py  MisraGries.py  SpaceSavings.py
experiments/src/sketches/heapbased/: CountMin_heap.py  CountSketchPlusPlus_heap.py  CountSketch_heap.py  heap.py
(+34 files in other folders)
